--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -293,7 +293,7 @@ div.Example:before {
 
 .MyDef {
   padding: 1em;
-  background: #9fffb4;
+  background: #fcffa4;
   border: 2px solid black;
   border-radius: 10px;
 }
